--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:js && npm run lint:prettier",
-    "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
+    "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/vercel-builder": "^0.22.1",
+    "@types/jest": "^27.4.1",
     "browser-image-compression": "^1.0.17",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.19.3",
@@ -40,17 +42,25 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@svg-maps/japan": "^1.0.1",
     "@types/vue-cropperjs": "^4.1.2",
+    "@vue/test-utils": "^1.3.0",
+    "axios-mock-adapter": "^1.20.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^27.5.1",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "flush-promises": "^1.0.2",
+    "jest": "^27.5.1",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1",
     "sass": "^1.49.7",
     "sass-loader": "^10.2.0",
     "swiper": "^5.4.5",
+    "ts-jest": "^27.1.4",
     "vue-awesome-swiper": "^4.1.1",
     "vue-cropperjs": "^4.0.0",
+    "vue-jest": "^3.0.7",
     "vue-js-modal": "^2.0.1",
     "vue-svg-map": "^1.2.0"
   }
